# testable-calculator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
calculator/: __init__.py
calculator/ui/: cli.py  gui.py
tests/: test_cli.py  test_gui.py  test_model.py
