[tool.poetry]
name = "unibo-dtm-se-calculator"
packages = [
    { include = "calculator" },
]
version = "0.1.0"
description = "A simple calculator toolkit written in Python, with several UIs. It is part of the Software Engineering course at the University of Bologna."
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Kivy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
pytest = "^8.1.1"
coverage = "^7.4.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
